[tool.poetry]
name = "youtube-livechat-helper"
version = "0.1.0"
description = ""
authors = ["Illia Ananich <illia.ananich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
